# wxhearts

./: CMakeLists.txt  Info.plist.in  README.md  card.cpp  card.h  cards.cpp  comp2.cpp  computer.cpp  computer.h  debug.h  dlg.cpp  dlg.h  hearts.cpp  hearts.h  hearts.xrc  help_mac.mm  human.cpp  lead.cpp  main.cpp  main.h  main2.cpp  player.cpp  player.h  regentry.h  resource.h  sound.cpp  welcome.cpp  wxhearts.6  wxhearts.chm  wxhearts.desktop  wxhearts.metainfo.xml  wxhearts.rc  wxhearts.rcv
.claude/: settings.local.json
wxhearts.help/Contents/: Info.plist
wxhearts.help/Contents/Resources/en.lproj/: hearts_novice.html  hearts_object.html  hearts_score.html  hearts_strategy.html  index.html  shared.css  wxhearts.helpindex
wxheartshelpchm/: wxhearts.chm  wxhearts.hhp
